deploy-mosquitto.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: mosquitto-ephemeral
spec:
  replicas: 1
  strategy:
    type: Rolling
  selector:
    name: mosquitto-ephemeral
  template:
    metadata:
      name: mosquitto-ephemeral
      labels:
        name: mosquitto-ephemeral
    spec:
      containers:
        - env: 
          - name: SOLUNAR_WS_LOG_LEVEL
            value: "1"
          name: mosquitto-ephemeral
          image: quay.io/kboone/mosquitto-ephemeral:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1883 
              protocol: TCP
            - containerPort: 8883 
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
          securityContext:
            privileged: false
---
kind: Service
apiVersion: v1
metadata:
  name: mosquitto-ephemeral-tcp
spec:
  ports:
    - name: mosquitto-ephemeral-tcp
      port: 1883
      protocol: TCP
      targetPort: 1883
      nodePort: 32321
  selector:
    name: mosquitto-ephemeral
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: mosquitto-ephemeral-tls
spec:
  ports:
    - name: mosquitto-ephemeral-tls
      port: 8883
      protocol: TCP
      targetPort: 8883
  selector:
    name: mosquitto-ephemeral
