mqtt-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mosquitto-ephemeral-tls
  labels:
    app: industrialapp
spec:
  to:
    kind: Service
    name: mosquitto-ephemeral-tls
  port:
    targetPort: 8883
  tls:
    termination: passthrough
